# ---------------------------------------------------------------------------
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
# 
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ---------------------------------------------------------------------------

cc_sources = \
  activemq/connector/ConnectorFactoryMapRegistrarTest.cpp \
  activemq/connector/ConnectorFactoryMapTest.cpp \
  activemq/connector/stomp/commands/AbortCommandTest.cpp \
  activemq/connector/stomp/commands/AckCommandTest.cpp \
  activemq/connector/stomp/commands/BeginCommandTest.cpp \
  activemq/connector/stomp/commands/BytesMessageCommandTest.cpp \
  activemq/connector/stomp/commands/CommandConstantsTest.cpp \
  activemq/connector/stomp/commands/CommitCommandTest.cpp \
  activemq/connector/stomp/commands/ConnectCommandTest.cpp \
  activemq/connector/stomp/commands/ConnectedCommandTest.cpp \
  activemq/connector/stomp/commands/DisconnectCommandTest.cpp \
  activemq/connector/stomp/commands/ErrorCommandTest.cpp \
  activemq/connector/stomp/commands/MessageCommandTest.cpp \
  activemq/connector/stomp/commands/ReceiptCommandTest.cpp \
  activemq/connector/stomp/commands/SubscribeCommandTest.cpp \
  activemq/connector/stomp/commands/TextMessageCommandTest.cpp \
  activemq/connector/stomp/commands/UnsubscribeCommandTest.cpp \
  activemq/connector/stomp/marshal/MarshalerTest.cpp \
  activemq/connector/stomp/StompCommandReaderTest.cpp \
  activemq/connector/stomp/StompCommandWriterTest.cpp \
  activemq/connector/stomp/StompConnectorTest.cpp \
  activemq/connector/stomp/StompFrameTest.cpp \
  activemq/connector/stomp/StompDestinationTest.cpp \
  activemq/connector/stomp/StompSessionManagerTest.cpp \
  activemq/connector/openwire/OpenWireFormatTest.cpp \
  activemq/connector/openwire/marshal/PrimitiveMapMarshallerTest.cpp \
  activemq/connector/openwire/marshal/BaseDataStreamMarshallerTest.cpp \
  activemq/connector/openwire/utils/HexTableTest.cpp \
  activemq/connector/openwire/utils/BooleanStreamTest.cpp \
  activemq/connector/openwire/utils/OpenwireStringSupportTest.cpp \
  activemq/connector/openwire/utils/MessagePropertyInterceptorTest.cpp \
  activemq/connector/openwire/commands/ActiveMQBytesMessageTest.cpp \
  activemq/connector/openwire/commands/ActiveMQMapMessageTest.cpp \
  activemq/connector/openwire/commands/ActiveMQMessageTest.cpp \
  activemq/connector/openwire/commands/ActiveMQDestinationTest2.cpp \
  activemq/connector/openwire/commands/ActiveMQTopicTest.cpp \
  activemq/connector/openwire/commands/ActiveMQQueueTest.cpp \
  activemq/connector/openwire/commands/ActiveMQTempTopicTest.cpp \
  activemq/connector/openwire/commands/ActiveMQTempQueueTest.cpp \
  activemq/connector/openwire/commands/ActiveMQTextMessageTest.cpp \
  activemq/connector/openwire/commands/BrokerIdTest.cpp \
  activemq/connector/openwire/commands/BrokerInfoTest.cpp \
  activemq/core/ActiveMQConnectionFactoryTest.cpp \
  activemq/core/ActiveMQConnectionTest.cpp \
  activemq/core/ActiveMQSessionTest.cpp \
  activemq/cmsutil/DynamicDestinationResolverTest.cpp \
  activemq/cmsutil/CmsAccessorTest.cpp \
  activemq/cmsutil/CmsDestinationAccessorTest.cpp \
  activemq/cmsutil/SessionPoolTest.cpp \
  activemq/cmsutil/CmsTemplateTest.cpp \
  activemq/exceptions/ActiveMQExceptionTest.cpp \
  activemq/transport/IOTransportTest.cpp \
  activemq/transport/filters/ResponseCorrelatorTest.cpp \
  activemq/transport/TransportFactoryMapRegistrarTest.cpp \
  activemq/transport/TransportFactoryMapTest.cpp \
  activemq/util/PrimitiveValueNodeTest.cpp \
  activemq/util/PrimitiveListTest.cpp \
  activemq/util/PrimitiveMapTest.cpp \
  activemq/util/URISupportTest.cpp \
  activemq/util/MemoryUsageTest.cpp \
  activemq/util/LongSequenceGeneratorTest.cpp \
  decaf/internal/util/ByteArrayAdapterTest.cpp \
  decaf/internal/nio/ByteArrayPerspectiveTest.cpp \
  decaf/internal/nio/ByteArrayBufferTest.cpp \
  decaf/internal/nio/BufferFactoryTest.cpp \
  decaf/internal/nio/CharArrayBufferTest.cpp \
  decaf/internal/nio/DoubleArrayBufferTest.cpp \
  decaf/internal/nio/FloatArrayBufferTest.cpp \
  decaf/internal/nio/LongArrayBufferTest.cpp \
  decaf/internal/nio/IntArrayBufferTest.cpp \
  decaf/internal/nio/ShortArrayBufferTest.cpp \
  decaf/internal/net/URIEncoderDecoderTest.cpp \
  decaf/internal/net/URIHelperTest.cpp \
  decaf/lang/ByteTest.cpp \
  decaf/lang/CharacterTest.cpp \
  decaf/lang/BooleanTest.cpp \
  decaf/lang/ShortTest.cpp \
  decaf/lang/IntegerTest.cpp \
  decaf/lang/LongTest.cpp \
  decaf/lang/FloatTest.cpp \
  decaf/lang/DoubleTest.cpp \
  decaf/lang/ThreadTest.cpp \
  decaf/lang/ExceptionTest.cpp \
  decaf/lang/MathTest.cpp \
  decaf/lang/SystemTest.cpp \
  decaf/io/FilterInputStreamTest.cpp \
  decaf/io/FilterOutputStreamTest.cpp \
  decaf/io/BufferedInputStreamTest.cpp \
  decaf/io/BufferedOutputStreamTest.cpp \
  decaf/io/ByteArrayInputStreamTest.cpp \
  decaf/io/ByteArrayOutputStreamTest.cpp \
  decaf/io/DataInputStreamTest.cpp \
  decaf/io/DataOutputStreamTest.cpp \
  decaf/net/SocketFactoryTest.cpp \
  decaf/net/SocketTest.cpp \
  decaf/net/URITest.cpp \
  decaf/net/URISyntaxExceptionTest.cpp \
  decaf/net/URLEncoderTest.cpp \
  decaf/net/URLDecoderTest.cpp \
  decaf/util/StringTokenizerTest.cpp \
  decaf/util/Endian.cpp \
  decaf/util/DateTest.cpp \
  decaf/util/UUIDTest.cpp \
  decaf/util/RandomTest.cpp \
  decaf/util/MapTest.cpp \
  decaf/util/QueueTest.cpp \
  decaf/util/ListTest.cpp \
  decaf/util/SetTest.cpp \
  decaf/util/concurrent/CountDownLatchTest.cpp \
  decaf/util/concurrent/MutexTest.cpp \
  decaf/util/concurrent/ThreadPoolTest.cpp \
  decaf/util/concurrent/TimeUnitTest.cpp \
  decaf/util/concurrent/atomic/AtomicBooleanTest.cpp \
  decaf/util/concurrent/atomic/AtomicIntegerTest.cpp \
  decaf/nio/BufferTest.cpp \
  testRegistry.cpp \
  util/teamcity/TeamCityProgressListener.cpp \
  main.cpp

h_sources = \
  activemq/connector/ConnectorFactoryMapRegistrarTest.h \
  activemq/connector/ConnectorFactoryMapTest.h \
  activemq/connector/stomp/commands/AbortCommandTest.h \
  activemq/connector/stomp/commands/AckCommandTest.h \
  activemq/connector/stomp/commands/BeginCommandTest.h \
  activemq/connector/stomp/commands/BytesMessageCommandTest.h \
  activemq/connector/stomp/commands/CommandConstantsTest.h \
  activemq/connector/stomp/commands/CommitCommandTest.h \
  activemq/connector/stomp/commands/ConnectCommandTest.h \
  activemq/connector/stomp/commands/ConnectedCommandTest.h \
  activemq/connector/stomp/commands/DisconnectCommandTest.h \
  activemq/connector/stomp/commands/ErrorCommandTest.h \
  activemq/connector/stomp/commands/MessageCommandTest.h \
  activemq/connector/stomp/commands/ReceiptCommandTest.h \
  activemq/connector/stomp/commands/SubscribeCommandTest.h \
  activemq/connector/stomp/commands/TextMessageCommandTest.h \
  activemq/connector/stomp/commands/UnsubscribeCommandTest.h \
  activemq/connector/stomp/marshal/MarshalerTest.h \
  activemq/connector/stomp/StompCommandReaderTest.h \
  activemq/connector/stomp/StompCommandWriterTest.h \
  activemq/connector/stomp/StompConnectorTest.h \
  activemq/connector/stomp/StompFrameTest.h \
  activemq/connector/stomp/StompDestinationTest.h \
  activemq/connector/stomp/StompSessionManagerTest.h \
  activemq/connector/openwire/OpenWireFormatTest.h \
  activemq/connector/openwire/marshal/PrimitiveMapMarshallerTest.h \
  activemq/connector/openwire/marshal/BaseDataStreamMarshallerTest.h \
  activemq/connector/openwire/utils/HexTableTest.h \
  activemq/connector/openwire/utils/BooleanStreamTest.h \
  activemq/connector/openwire/utils/OpenwireStringSupportTest.h \
  activemq/connector/openwire/utils/MessagePropertyInterceptorTest.h \
  activemq/connector/openwire/commands/ActiveMQBytesMessageTest.h \
  activemq/connector/openwire/commands/ActiveMQMapMessageTest.h \
  activemq/connector/openwire/commands/ActiveMQMessageTest.h \
  activemq/connector/openwire/commands/ActiveMQDestinationTest2.h \
  activemq/connector/openwire/commands/ActiveMQTopicTest.h \
  activemq/connector/openwire/commands/ActiveMQQueueTest.h \
  activemq/connector/openwire/commands/ActiveMQTempTopicTest.h \
  activemq/connector/openwire/commands/ActiveMQTempQueueTest.h \
  activemq/connector/openwire/commands/ActiveMQTextMessageTest.h \
  activemq/connector/openwire/commands/BrokerIdTest.h \
  activemq/connector/openwire/commands/BrokerInfoTest.h \
  activemq/core/ActiveMQConnectionFactoryTest.h \
  activemq/core/ActiveMQConnectionTest.h \
  activemq/core/ActiveMQSessionTest.h \
  activemq/cmsutil/DynamicDestinationResolverTest.h \
  activemq/cmsutil/CmsAccessorTest.h \
  activemq/cmsutil/CmsDestinationAccessorTest.h \
  activemq/cmsutil/SessionPoolTest.h \
  activemq/cmsutil/CmsTemplateTest.h \
  activemq/exceptions/ActiveMQExceptionTest.h \
  activemq/transport/IOTransportTest.h \
  activemq/transport/filters/ResponseCorrelatorTest.h \
  activemq/transport/TransportFactoryMapRegistrarTest.h \
  activemq/transport/TransportFactoryMapTest.h \
  activemq/util/PrimitiveValueNodeTest.h \
  activemq/util/PrimitiveListTest.h \
  activemq/util/PrimitiveMapTest.h \
  activemq/util/URISupportTest.h \
  activemq/util/MemoryUsageTest.h \
  activemq/util/LongSequenceGeneratorTest.h \
  decaf/internal/util/ByteArrayAdapterTest.h \
  decaf/internal/nio/ByteArrayPerspectiveTest.h \
  decaf/internal/nio/ByteArrayBufferTest.h \
  decaf/internal/nio/BufferFactoryTest.h \
  decaf/internal/nio/CharArrayBufferTest.h \
  decaf/internal/nio/DoubleArrayBufferTest.h \
  decaf/internal/nio/FloatArrayBufferTest.h \
  decaf/internal/nio/LongArrayBufferTest.h \
  decaf/internal/nio/IntArrayBufferTest.h \
  decaf/internal/nio/ShortArrayBufferTest.h \
  decaf/internal/net/URIEncoderDecoderTest.h \
  decaf/internal/net/URIHelperTest.h \
  decaf/lang/ByteTest.h \
  decaf/lang/CharacterTest.h \
  decaf/lang/BooleanTest.h \
  decaf/lang/ShortTest.h \
  decaf/lang/IntegerTest.h \
  decaf/lang/LongTest.h \
  decaf/lang/FloatTest.h \
  decaf/lang/DoubleTest.h \
  decaf/lang/ThreadTest.h \
  decaf/lang/ExceptionTest.h \
  decaf/lang/MathTest.h \
  decaf/lang/SystemTest.h \
  decaf/io/FilterInputStreamTest.h \
  decaf/io/FilterOutputStreamTest.h \
  decaf/io/BufferedInputStreamTest.h \
  decaf/io/BufferedOutputStreamTest.h \
  decaf/io/ByteArrayInputStreamTest.h \
  decaf/io/ByteArrayOutputStreamTest.h \
  decaf/io/DataInputStreamTest.h \
  decaf/io/DataOutputStreamTest.h \
  decaf/net/SocketFactoryTest.h \
  decaf/net/SocketTest.h \
  decaf/net/URITest.h \
  decaf/net/URISyntaxExceptionTest.h \
  decaf/net/URLEncoderTest.h \
  decaf/net/URLDecoderTest.h \
  decaf/util/StringTokenizerTest.h \
  decaf/util/Endian.h \
  decaf/util/DateTest.h \
  decaf/util/UUIDTest.h \
  decaf/util/RandomTest.h \
  decaf/util/ListTest.h \
  decaf/util/MapTest.h \
  decaf/util/QueueTest.h \
  decaf/util/SetTest.h \
  decaf/util/concurrent/CountDownLatchTest.h \
  decaf/util/concurrent/MutexTest.h \
  decaf/util/concurrent/ThreadPoolTest.h \
  decaf/util/concurrent/TimeUnitTest.h \
  decaf/util/concurrent/atomic/AtomicBooleanTest.h \
  decaf/util/concurrent/atomic/AtomicIntegerTest.h \
  decaf/nio/BufferTest.h  

## include activemq/connector/openwire/marshal/v1/srcmakefile.mk
## include activemq/connector/openwire/marshal/v2/srcmakefile.mk
## include activemq/connector/openwire/marshal/v3/srcmakefile.mk

## Compile this as part of make check
check_PROGRAMS = activemq-test

## Also run the tests as part of make check
TESTS = $(check_PROGRAMS)

## 
## Compiler/Linker Options
##
activemq_test_SOURCES = $(cc_sources)
activemq_test_CXXFLAGS = $(AMQ_TEST_CXXFLAGS) -I$(srcdir)/../main @CPPUNIT_CFLAGS@
activemq_test_LDADD= $(AMQ_TEST_LIBS) @CPPUNIT_LIBS@ 
